box collaspse , alt-tab, icheck

--- a/plugins/alt.1.0.0/alt-box.html
+++ b/plugins/alt.1.0.0/alt-box.html
@@ -79,7 +79,8 @@
             aclGroup: Array,
             dataUri: String,
             dataAclUri: String,
-            dataUrl: String
+            dataUrl: String,
+            dataUri:String
         },
         computed: {
             header() {
