alt-table delete data-index

--- a/plugins/alt.1.0.0/alt-table.html
+++ b/plugins/alt.1.0.0/alt-table.html
@@ -37,8 +37,8 @@
                         } else {
                             del_input.attr('name', '_d[]');
                         }
-                        del_input.val($tr.attr("index"));
-                        if ($tr.attr("index")) {
+                        del_input.val($tr.attr("data-index"));
+                        if ($tr.attr("data-index")) {
                             $table.after(del_input);
                         }
 
