--- a/AdminLTE/pages/login.html
+++ b/AdminLTE/pages/login.html
@@ -2,182 +2,230 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="robots" content="noindex, nofollow">
-  <title>{{company}} | Log in</title>
-  <!-- Tell the browser to be responsive to screen width -->
-  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"> {% for c in css
-  %}
-  <link rel="stylesheet" href="{{c|raw}}"> {% endfor %}
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="robots" content="noindex, nofollow">
+    <title>{{company}} | Log in</title>
+    <!-- Tell the browser to be responsive to screen width -->
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"> {% for c in
+    css %}
+    <link rel="stylesheet" href="{{c|raw}}"> {% endfor %}
 
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 
 
-  {% for js in jquery %}
-  <script src="{{js|raw}}"></script> {% endfor %}
+    {% for js in jquery %}
+    <script src="{{js|raw}}"></script>
+    {% endfor %}
+
+    {% for js in vue.setting.js %}
+    <script src="{{vue.base}}/{{js|raw}}"></script>
+    {% endfor %}
 
 
 </head>
 
 <body class="hold-transition login-page">
-  <div class="login-box">
-    <div class="login-logo">
-      <a href="">
-        {% if logo %}
-        <img src="{{logo}}" /> {% else %}
-        <b>{{company}}</b>
-        {% endif %}
+    <div class="login-box" id="div1">
+        <div class="login-logo">
+            <a href="">
+                {% if logo %}
+                <img src="{{logo}}" />
+                {% else %}
+                <b>{{company}}</b>
+                {% endif %}
 
-      </a>
+            </a>
+        </div>
+        <!-- /.login-logo -->
+        <div class="login-box-body">
+            <p class="login-box-msg">Sign in to start your session</p>
+
+            <form method="post" onsubmit="return onFormSubmit()">
+                <div class="form-group has-feedback">
+                    <input type="username" class="form-control" placeholder="Username" name="username">
+                    <span class="glyphicon glyphicon-user form-control-feedback"></span>
+                </div>
+                <div class="form-group has-feedback">
+                    <input type="password" class="form-control" placeholder="Password" name="password">
+                    <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                </div>
+
+                {% if ip2step %}
+                <div class="form-group has-feedback">
+                    <input type="text" class="form-control" placeholder="2-step verification" name="code" />
+                    <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                </div>
+                {% endif %}
+
+                <div class="row">
+                    <div class="col-xs-8">
+                        <div class="checkbox icheck">
+                            <label>
+                                <input type="checkbox" id="remember_me"> Remember Me
+                            </label>
+                        </div>
+                    </div>
+                    <!-- /.col -->
+                    <div class="col-xs-4">
+                        <button type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
+                    </div>
+                    <!-- /.col -->
+                </div>
+            </form>
+
+
+            <!-- /.social-auth-links -->
+
+            <a href="#" id="btn_forgot">I forgot my password</a><br>
+            <span>{{version}}</span>
+
+        </div>
+        <!-- /.login-box-body -->
     </div>
-    <!-- /.login-logo -->
-    <div class="login-box-body">
-      <p class="login-box-msg">Sign in to start your session</p>
+    <!-- /.login-box -->
 
-      <form method="post" onsubmit="return onFormSubmit()">
-        <div class="form-group has-feedback">
-          <input type="username" class="form-control" placeholder="Username" name="username">
-          <span class="glyphicon glyphicon-user form-control-feedback"></span>
-        </div>
-        <div class="form-group has-feedback">
-          <input type="password" class="form-control" placeholder="Password" name="password">
-          <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-        </div>
+    <input type='hidden' value="{{r}}" id="redirect" />
 
-        {% if ip2step %}
-        <div class="form-group has-feedback">
-          <input type="text" class="form-control" placeholder="2-step verification" name="code" />
-          <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-        </div>
-        {% endif %}
-
-        <div class="row">
-          <div class="col-xs-8">
-            <div class="checkbox icheck">
-              <label>
-                <input type="checkbox" id="remember_me"> Remember Me
-              </label>
+    <template id="forget_dialog">
+        <form action="System/login/forget_password" method="post">
+            <div class="form-group">
+                <label>Username</label>
+                <input class="form-control" type="text" name="username" required />
             </div>
-          </div>
-          <!-- /.col -->
-          <div class="col-xs-4">
-            <button type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
-          </div>
-          <!-- /.col -->
-        </div>
-      </form>
+            <div class="form-group">
+                <label>Email</label>
+                <input class="form-control" type="email" name="email" required />
+            </div>
+            <div>
+                <button type="submit" class="btn btn-success"><i class="fa fa-check"></i> Submit</button>
+            </div>
+        </form>
+    </template>
 
+    {% for src in script %}
+    <script src="{{src|raw}}"></script>
+    {% endfor %}
+    {% verbatim %}
+    <script>
+        var vm = new Vue({
+            el: "#div1",
+            created: function () {
+                if ('credentials' in navigator) {
+                    navigator.credentials.get({
+                        password: true
+                    }).then(creds => {
+                        if (creds) {
+                            //Do something with the credentials.
+                            this.login(creds.id, creds.password);
+                        }
+                    });
+                } else {
+                    //Handle sign-in the way you did before.
+                };
+            }, methods: {
+                login(id, password) {
+                    this.$http.post("System/login", {
+                        username: id,
+                        password
+                    }).then(resp => {
+                        if (resp.data.code == 200) {
+                            if ($("#redirect").val() != "") {
+                                window.self.location = $("#redirect").val();
+                            } else {
+                                window.self.location.reload();
+                            }
+                        } else {
+                            var bb = bootbox.dialog({
+                                message: "Incorrect username or password"
+                            });
 
-      <!-- /.social-auth-links -->
+                        }
+                    });
+                }
 
-      <a href="#" id="btn_forgot">I forgot my password</a><br>
-      <span>{{version}}</span>
-
-    </div>
-    <!-- /.login-box-body -->
-  </div>
-  <!-- /.login-box -->
-
-  <input type='hidden' value="{{r}}" id="redirect" />
-
-  <template id="forget_dialog">
-    <form action="System/login/forget_password" method="post">
-      <div class="form-group">
-        <label>Username</label>
-        <input class="form-control" type="text" name="username" required/>
-      </div>
-      <div class="form-group">
-        <label>Email</label>
-        <input class="form-control" type="email" name="email" required/>
-      </div>
-      <div>
-        <button type="submit" class="btn btn-success"><i class="fa fa-check"></i> Submit</button>
-      </div>
-    </form>
-  </template>
-
-  {% for src in script %}
-  <script src="{{src|raw}}"></script> {% endfor %} {% verbatim %}
-  <script>
-    $(function () {
-      $('input').iCheck({
-        checkboxClass: 'icheckbox_square-blue',
-        radioClass: 'iradio_square-blue',
-        increaseArea: '20%' // optional
-      });
-
-      $("#remember_me").prop("checked", $.cookie("app.remember_me"));
-      if ($.cookie("app.remember_me") == "true") {
-        $("input[name='username']").val($.cookie("app.username"));
-        $("#remember_me").iCheck('check');
-        $("#remember_me").iCheck('update');
-      } else {
-        $("input[name='username']").val("");
-      }
-
-    });
-
-
-    function onFormSubmit() {
-      $.post("System/login", {
-        username: $("input[name='username']").val(),
-        password: $("input[name='password']").val(),
-        code: $("input[name='code']").val()
-      }, function (data) {
-        if (data.code == 200) {
-          //success login
-          if ($("#remember_me").is(":checked")) {
-            $.cookie("app.username", $("input[name='username']").val());
-            $.cookie("app.remember_me", true);
-          } else {
-            $.cookie("app.remember_me", false);
-          }
-
-          if ($("#redirect").val() != "") {
-            window.self.location = $("#redirect").val();
-          } else {
-            window.self.location.reload();
-          }
-        } else {
-          $(".login-box-msg").text(data.message).addClass("text-red");
-        }
-      }, 'json');
-
-      return false;
-
-    }
-
-    $(function () {
-      $("#btn_forgot").on("click", function () {
-        var bb = bootbox.dialog({
-          title: "Forget password",
-          message: $("#forget_dialog").html()
-
-        }).on('shown.bs.modal', function () {
-          $(this).find("form").on("submit", function () {
-            $(this).ajaxSubmit(function (data) {
-              bb.modal('hide');
-              if (data.error) {
-                bootbox.alert(data.error.message);
-              } else {
-                bootbox.alert("Password sent to your email if information correct");
-              }
-
-
-            });
-            return false;
-          });
+            }
         });
-      });
 
-    });
-  </script> {% endverbatim %}
+
+        $(function () {
+            $('input').iCheck({
+                checkboxClass: 'icheckbox_square-blue',
+                radioClass: 'iradio_square-blue',
+                increaseArea: '20%' // optional
+            });
+
+            $("#remember_me").prop("checked", $.cookie("app.remember_me"));
+            if ($.cookie("app.remember_me") == "true") {
+                $("input[name='username']").val($.cookie("app.username"));
+                $("#remember_me").iCheck('check');
+                $("#remember_me").iCheck('update');
+            } else {
+                $("input[name='username']").val("");
+            }
+
+        });
+
+
+        function onFormSubmit() {
+            $.post("System/login", {
+                username: $("input[name='username']").val(),
+                password: $("input[name='password']").val(),
+                code: $("input[name='code']").val()
+            }, function (data) {
+                if (data.code == 200) {
+                    //success login
+                    if ($("#remember_me").is(":checked")) {
+                        $.cookie("app.username", $("input[name='username']").val());
+                        $.cookie("app.remember_me", true);
+                    } else {
+                        $.cookie("app.remember_me", false);
+                    }
+
+                    if ($("#redirect").val() != "") {
+                        window.self.location = $("#redirect").val();
+                    } else {
+                        window.self.location.reload();
+                    }
+                } else {
+                    $(".login-box-msg").text(data.message).addClass("text-red");
+                }
+            }, 'json');
+
+            return false;
+
+        }
+
+        $(function () {
+            $("#btn_forgot").on("click", function () {
+                var bb = bootbox.dialog({
+                    title: "Forget password",
+                    message: $("#forget_dialog").html()
+
+                }).on('shown.bs.modal', function () {
+                    $(this).find("form").on("submit", function () {
+                        $(this).ajaxSubmit(function (data) {
+                            bb.modal('hide');
+                            if (data.error) {
+                                bootbox.alert(data.error.message);
+                            } else {
+                                bootbox.alert("Password sent to your email if information correct");
+                            }
+
+
+                        });
+                        return false;
+                    });
+                });
+            });
+
+        });
+    </script> {% endverbatim %}
 </body>
 
 </html>
