--- a/plugins/alt.1.0.0/alt-form.html
+++ b/plugins/alt.1.0.0/alt-form.html
@@ -1,11 +1,24 @@
 <template id="alt-form">
-    <form>
+    <form novalidate @submit="onSubmit($event)">
         <slot></slot>
     </form>
 </template>
 
 <script>
     Vue.component("alt-form", {
-        template: document.currentScript.ownerDocument.getElementById("alt-form")
+        template: document.currentScript.ownerDocument.getElementById("alt-form"),
+        created() {
+            console.log("created");
+            $(this.$el).validate();
+        },
+        methods: {
+            onSubmit(e) {
+                if ($(this.$el).valid()) {
+                    this.$emit("submit", e);
+                } else {
+                    e.preventDefault();
+                }
+            }
+        }
     });
 </script>
