--- a/AdminLTE/index.html
+++ b/AdminLTE/index.html
@@ -8,32 +8,21 @@
     <base href="{{base}}" />
     <title>{{company}} | {{title}}</title>
     <!-- Tell the browser to be responsive to screen width -->
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"> {% for c in css %}
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"> {% for c in
+    css %}
     <link rel="stylesheet" href="{{c|raw}}"> {% endfor %}
-    <!-- script src="composer/components/require-built.js"></script -->
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
 
     {% for js in jquery %}
     <script src="{{js|raw}}"></script> {% endfor %} {% if firebase %}
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js" defer></script> {% endif %}
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.2.0/webcomponents-loader.js"></script> {% for js in vue %}
+    {% for js in vue %}
     <script src="{{js|raw}}"></script> {% endfor %}
 
 
-    <link id="pb-file" rel="import" href="{{system_base}}/plugins/pb.1.0.0/pb.html?v={{system.version}}&t={{t}}">
-    <link id="alt-file" rel="import" href="{{system_base}}/plugins/alt.1.0.0/alt.html?v={{system.version}}&t={{t}}">
-    <link id="rt-file" rel="import" href="{{system_base}}/plugins/rt.2.0.0/rt.html?v={{system.version}}&t={{t}}">
-    <link id="rt2-file" rel="import" href="{{system_base}}/plugins/rt.2.0.0/rt2.html?v={{system.version}}&t={{t}}">
-    <link rel="stylesheet" href="{{system_base}}/plugins/rt.2.0.0/style.css">
-    <link id="bs-file" rel="import" href="{{system_base}}/plugins/bs.1.0.0/bs.html?v={{system.version}}&t={{t}}">
-
+    <script src="{{system_base}}/plugins/vue-bs/dist/bs.umd.min.js"></script>
+    <script src="{{system_base}}/plugins/alt-component/dist/alt-component.umd.js"></script>
+    <link rel="stylesheet" href="{{system_base}}/plugins/alt-component/dist/alt-component.css" />
 
 </head>
 
@@ -362,12 +351,14 @@
                         </div>
                         <div class="form-group">
                             <label class="control-sidebar-subheading">
-                                <input type="checkbox" data-layout="sidebar-collapse" class="pull-right"> Toggle Sidebar</label>
+                                <input type="checkbox" data-layout="sidebar-collapse" class="pull-right"> Toggle
+                                Sidebar</label>
                             <p>Toggle the left sidebar's state (open or collapse)</p>
                         </div>
                         <div class="form-group">
                             <label class="control-sidebar-subheading">
-                                <input type="checkbox" data-enable="expandOnHover" class="pull-right"> Sidebar Expand on Hover</label>
+                                <input type="checkbox" data-enable="expandOnHover" class="pull-right"> Sidebar Expand
+                                on Hover</label>
                             <p>Let the sidebar mini expand on hover</p>
                         </div>
                         <div class="form-group">
@@ -377,12 +368,14 @@
                         </div>
                         <div class="form-group">
                             <label class="control-sidebar-subheading">
-                                <input type="checkbox" data-controlsidebar="control-sidebar-open" class="pull-right"> Toggle Right Sidebar Slide</label>
+                                <input type="checkbox" data-controlsidebar="control-sidebar-open" class="pull-right">
+                                Toggle Right Sidebar Slide</label>
                             <p>Toggle between slide over content and push content effects</p>
                         </div>
                         <div class="form-group">
                             <label class="control-sidebar-subheading">
-                                <input type="checkbox" data-sidebarskin="toggle" class="pull-right"> Toggle Right Sidebar Skin</label>
+                                <input type="checkbox" data-sidebarskin="toggle" class="pull-right"> Toggle Right
+                                Sidebar Skin</label>
                             <p>Toggle between dark and light skins for the right sidebar</p>
                         </div>
                     </form>
@@ -390,7 +383,8 @@
                     <h4 class="control-sidebar-heading">Skins</h4>
                     <ul class="list-unstyled clearfix" id="app-skin">
                         <li style="float:left; width: 33.33333%; padding: 5px;">
-                            <a href="javascript:void(0);" data-skin="skin-blue" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)" class="clearfix full-opacity-hover">
+                            <a href="javascript:void(0);" data-skin="skin-blue" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)"
+                                class="clearfix full-opacity-hover">
                                 <div>
                                     <span style="display:block; width: 20%; float: left; height: 7px; background: #367fa9;"></span>
                                     <span class="bg-light-blue" style="display:block; width: 80%; float: left; height: 7px;"></span>
@@ -403,7 +397,8 @@
                             <p class="text-center no-margin">Blue</p>
                         </li>
                         <li style="float:left; width: 33.33333%; padding: 5px;">
-                            <a href="javascript:void(0);" data-skin="skin-black" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)" class="clearfix full-opacity-hover">
+                            <a href="javascript:void(0);" data-skin="skin-black" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)"
+                                class="clearfix full-opacity-hover">
                                 <div style="box-shadow: 0 0 2px rgba(0,0,0,0.1)" class="clearfix">
                                     <span style="display:block; width: 20%; float: left; height: 7px; background: #fefefe;"></span>
                                     <span style="display:block; width: 80%; float: left; height: 7px; background: #fefefe;"></span>
@@ -416,7 +411,8 @@
                             <p class="text-center no-margin">Black</p>
                         </li>
                         <li style="float:left; width: 33.33333%; padding: 5px;">
-                            <a href="javascript:void(0);" data-skin="skin-purple" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)" class="clearfix full-opacity-hover">
+                            <a href="javascript:void(0);" data-skin="skin-purple" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)"
+                                class="clearfix full-opacity-hover">
                                 <div>
                                     <span style="display:block; width: 20%; float: left; height: 7px;" class="bg-purple-active"></span>
                                     <span class="bg-purple" style="display:block; width: 80%; float: left; height: 7px;"></span>
@@ -429,7 +425,8 @@
                             <p class="text-center no-margin">Purple</p>
                         </li>
                         <li style="float:left; width: 33.33333%; padding: 5px;">
-                            <a href="javascript:void(0);" data-skin="skin-green" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)" class="clearfix full-opacity-hover">
+                            <a href="javascript:void(0);" data-skin="skin-green" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)"
+                                class="clearfix full-opacity-hover">
                                 <div>
                                     <span style="display:block; width: 20%; float: left; height: 7px;" class="bg-green-active"></span>
                                     <span class="bg-green" style="display:block; width: 80%; float: left; height: 7px;"></span>
@@ -442,7 +439,8 @@
                             <p class="text-center no-margin">Green</p>
                         </li>
                         <li style="float:left; width: 33.33333%; padding: 5px;">
-                            <a href="javascript:void(0);" data-skin="skin-red" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)" class="clearfix full-opacity-hover">
+                            <a href="javascript:void(0);" data-skin="skin-red" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)"
+                                class="clearfix full-opacity-hover">
                                 <div>
                                     <span style="display:block; width: 20%; float: left; height: 7px;" class="bg-red-active"></span>
                                     <span class="bg-red" style="display:block; width: 80%; float: left; height: 7px;"></span>
@@ -455,7 +453,8 @@
                             <p class="text-center no-margin">Red</p>
                         </li>
                         <li style="float:left; width: 33.33333%; padding: 5px;">
-                            <a href="javascript:void(0);" data-skin="skin-yellow" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)" class="clearfix full-opacity-hover">
+                            <a href="javascript:void(0);" data-skin="skin-yellow" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)"
+                                class="clearfix full-opacity-hover">
                                 <div>
                                     <span style="display:block; width: 20%; float: left; height: 7px;" class="bg-yellow-active"></span>
                                     <span class="bg-yellow" style="display:block; width: 80%; float: left; height: 7px;"></span>
@@ -468,7 +467,8 @@
                             <p class="text-center no-margin">Yellow</p>
                         </li>
                         <li style="float:left; width: 33.33333%; padding: 5px;">
-                            <a href="javascript:void(0);" data-skin="skin-blue-light" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)" class="clearfix full-opacity-hover">
+                            <a href="javascript:void(0);" data-skin="skin-blue-light" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)"
+                                class="clearfix full-opacity-hover">
                                 <div>
                                     <span style="display:block; width: 20%; float: left; height: 7px; background: #367fa9;"></span>
                                     <span class="bg-light-blue" style="display:block; width: 80%; float: left; height: 7px;"></span>
@@ -481,7 +481,8 @@
                             <p class="text-center no-margin" style="font-size: 12px">Blue Light</p>
                         </li>
                         <li style="float:left; width: 33.33333%; padding: 5px;">
-                            <a href="javascript:void(0);" data-skin="skin-black-light" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)" class="clearfix full-opacity-hover">
+                            <a href="javascript:void(0);" data-skin="skin-black-light" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)"
+                                class="clearfix full-opacity-hover">
                                 <div style="box-shadow: 0 0 2px rgba(0,0,0,0.1)" class="clearfix">
                                     <span style="display:block; width: 20%; float: left; height: 7px; background: #fefefe;"></span>
                                     <span style="display:block; width: 80%; float: left; height: 7px; background: #fefefe;"></span>
@@ -494,7 +495,8 @@
                             <p class="text-center no-margin" style="font-size: 12px">Black Light</p>
                         </li>
                         <li style="float:left; width: 33.33333%; padding: 5px;">
-                            <a href="javascript:void(0);" data-skin="skin-purple-light" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)" class="clearfix full-opacity-hover">
+                            <a href="javascript:void(0);" data-skin="skin-purple-light" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)"
+                                class="clearfix full-opacity-hover">
                                 <div>
                                     <span style="display:block; width: 20%; float: left; height: 7px;" class="bg-purple-active"></span>
                                     <span class="bg-purple" style="display:block; width: 80%; float: left; height: 7px;"></span>
@@ -507,7 +509,8 @@
                             <p class="text-center no-margin" style="font-size: 12px">Purple Light</p>
                         </li>
                         <li style="float:left; width: 33.33333%; padding: 5px;">
-                            <a href="javascript:void(0);" data-skin="skin-green-light" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)" class="clearfix full-opacity-hover">
+                            <a href="javascript:void(0);" data-skin="skin-green-light" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)"
+                                class="clearfix full-opacity-hover">
                                 <div>
                                     <span style="display:block; width: 20%; float: left; height: 7px;" class="bg-green-active"></span>
                                     <span class="bg-green" style="display:block; width: 80%; float: left; height: 7px;"></span>
@@ -520,7 +523,8 @@
                             <p class="text-center no-margin" style="font-size: 12px">Green Light</p>
                         </li>
                         <li style="float:left; width: 33.33333%; padding: 5px;">
-                            <a href="javascript:void(0);" data-skin="skin-red-light" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)" class="clearfix full-opacity-hover">
+                            <a href="javascript:void(0);" data-skin="skin-red-light" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)"
+                                class="clearfix full-opacity-hover">
                                 <div>
                                     <span style="display:block; width: 20%; float: left; height: 7px;" class="bg-red-active"></span>
                                     <span class="bg-red" style="display:block; width: 80%; float: left; height: 7px;"></span>
@@ -533,7 +537,8 @@
                             <p class="text-center no-margin" style="font-size: 12px">Red Light</p>
                         </li>
                         <li style="float:left; width: 33.33333%; padding: 5px;">
-                            <a href="javascript:void(0);" data-skin="skin-yellow-light" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)" class="clearfix full-opacity-hover">
+                            <a href="javascript:void(0);" data-skin="skin-yellow-light" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)"
+                                class="clearfix full-opacity-hover">
                                 <div>
                                     <span style="display:block; width: 20%; float: left; height: 7px;" class="bg-yellow-active"></span>
                                     <span class="bg-yellow" style="display:block; width: 80%; float: left; height: 7px;"></span>
@@ -548,7 +553,8 @@
 
                         {% for skin in custom_skin %}
                         <li style="float:left; width: 33.33333%; padding: 5px;">
-                            <a href="javascript:void(0);" data-skin="{{skin.name}}" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)" class="clearfix full-opacity-hover">{{skin.icon}}</a>
+                            <a href="javascript:void(0);" data-skin="{{skin.name}}" style="display: block; box-shadow: 0 0 3px rgba(0,0,0,0.4)"
+                                class="clearfix full-opacity-hover">{{skin.icon}}</a>
                             <p class="text-center no-margin" style="font-size:{{skin.font-size}}">{{skin.name}}</p>
                         </li>
                         {% endfor %}
