--- a/AdminLTE/index.html
+++ b/AdminLTE/index.html
@@ -27,7 +27,7 @@
 
 
     <script src="{{system_base}}/plugins/vue-bs/dist/bs.umd.min.js"></script>
-    <script src="{{system_base}}/plugins/x-html/dist/x.html.umd.min.js"></script>
+    <script src="{{system_base}}/plugins/x-html/dist/x-html.umd.min.js"></script>
     <script src="{{system_base}}/plugins/alt-component/dist/alt-component.umd.js"></script>
     <link rel="stylesheet" href="{{system_base}}/plugins/alt-component/dist/alt-component.css" />
 
