alt-component dist change

--- a/plugins/alt-component/index.html
+++ b/plugins/alt-component/index.html
@@ -28,7 +28,8 @@
     <link rel="stylesheet" href="/lib/daterangepicker-master/daterangepicker.css" />
     <script src="/lib/daterangepicker-master/daterangepicker.js"></script>
 
-
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/js/select2.min.js"></script>
 </head>
 
 <body>
@@ -38,6 +39,13 @@
         <hr>
 
         <div id="div1">
+
+            <select is="select2"  name="domain_id" value="2699" >
+                <option>Please select</option>
+                <option value="2699">[2531] *.clubwheelock.hostlink.com.hk</option>
+                <option value="1739">[1730] 123sbasia.com</option>
+                <option value="1740">[1731] 123sbasia.net</option>
+            </select>
 
             <alt-e>
                 <input type="text" is="alt-input" value='test' />
