--- a/AdminLTE/index.html
+++ b/AdminLTE/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="{{system_base}}/dist/ionicons/css/ionicons.min.css" />
     <link rel="stylesheet" href="{{system_base}}/dist/pnotify/pnotify.css" />
     <link rel="stylesheet" href="{{system_base}}/dist/datatables/css/dataTables.bootstrap.min.css" />
+    <link rel="stylesheet" href="{{system_base}}/dist/fancybox/jquery.fancybox.min.css" />
 
 
     <script src="{{system_base}}/dist/main.js"></script>
