--- a/plugins/vue-bs/index.html
+++ b/plugins/vue-bs/index.html
@@ -12,6 +12,7 @@
 <body>
     index.html
     <div class="container">
+        <bs-input-select :options="{&quot;-&quot;:&quot;-&quot;,&quot;Bank of China&quot;:&quot;Bank of China&quot;,&quot;HSBC&quot;:&quot;HSBC&quot;,&quot;Hang Seng Bank&quot;:&quot;Hang Seng Bank&quot;,&quot;Industrial And Commercial Bank Of China&quot;:&quot;Industrial And Commercial Bank Of China&quot;,&quot;Standard Chartered&quot;:&quot;Standard Chartered&quot;}"></bs-input-select>
         <bs-input></bs-input>
         <bs-input-select :options="['1','2','3']"></bs-input-select>
     </div>
