--- a/AdminLTE/index.html
+++ b/AdminLTE/index.html
@@ -37,7 +37,7 @@
     <script src="{{js|raw}}"></script> {% endfor %}
 
 
-    <script src="{{system_base}}/plugins/vue-bs/dist/bs.umd.min.js"></script>
+    <script src="{{system_base}}/dist/vue-bs/bs.umd.min.js"></script>
     <script src="{{system_base}}/dist/x-html/x-html.umd.min.js"></script>
     <script src="{{system_base}}/dist/alt-component/alt-component.umd.js"></script>
     <link rel="stylesheet" href="{{system_base}}/dist/alt-component/alt-component.css" />
