--- a/AdminLTE/index.html
+++ b/AdminLTE/index.html
@@ -18,9 +18,12 @@
     <link rel="stylesheet" href="{{system_base}}/dist/pnotify/pnotify.css" />
     <link rel="stylesheet" href="{{system_base}}/dist/datatables/css/dataTables.bootstrap.min.css" />
     <link rel="stylesheet" href="{{system_base}}/dist/fancybox/jquery.fancybox.min.css" />
+    <link rel="stylesheet" href="{{system_base}}/dist/bootstrap-multiselect/css/bootstrap-multiselect.css" />
 
 
     <script src="{{system_base}}/dist/main.js"></script>
+
+    <script src="{{system_base}}/dist/bootstrap-multiselect/js/bootstrap-multiselect.js" />
 
     <link rel="stylesheet" href="{{system_base}}/dist/bootstrap3-editable/css/bootstrap-editable.css" />
     <script src="{{system_base}}/dist/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
