--- a/plugins/alt-component/index.html
+++ b/plugins/alt-component/index.html
@@ -40,7 +40,7 @@
 
         <div id="div1">
 
-            <select is="select2"  name="domain_id" value="2699" >
+            <select is="select2" name="domain_id" value="2699">
                 <option>Please select</option>
                 <option value="2699">[2531] *.clubwheelock.hostlink.com.hk</option>
                 <option value="1739">[1730] 123sbasia.com</option>
@@ -69,6 +69,7 @@
                 </div>
 
                 <datepicker></datepicker>
+                <datepicker value="2010-01-03"></datepicker>
 
 
                 <alt-date required value="2010-01-02"></alt-date>
