--- a/AdminLTE/pages/login.html
+++ b/AdminLTE/pages/login.html
@@ -7,34 +7,30 @@
     <meta name="robots" content="noindex, nofollow">
     <title>{{company}} | Log in</title>
     <!-- Tell the browser to be responsive to screen width -->
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"> 
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
     <link rel="stylesheet" href="{{system_base}}/dist/bootstrap/css/bootstrap.min.css" />
 
     <script src="{{system_base}}/dist/main.js"></script>
-  
+
     {% for c in css %}
-    <link rel="stylesheet" href="{{c|raw}}"> 
+    <link rel="stylesheet" href="{{c|raw}}">
     {% endfor %}
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-
-
 
     {% for js in vue.setting.js %}
     <script src="{{vue.base}}/{{js|raw}}"></script>
     {% endfor %}
 
+    {% for src in script %}
+    <script src="{{src|raw}}"></script>
+    {% endfor %}
 
 </head>
 
 <body class="hold-transition login-page">
-    <div class="login-box" id="div1">
+    <div class="login-box" id="app">
+        <input type='hidden' value="{{r}}" ref="redirect" />
+
         <div class="login-logo">
             <a href="">
                 {% if logo %}
@@ -47,21 +43,24 @@
         </div>
         <!-- /.login-logo -->
         <div class="login-box-body">
+
             <p class="login-box-msg">Sign in to start your session</p>
 
-            <form method="post" onsubmit="return onFormSubmit()">
+            <form>
                 <div class="form-group has-feedback">
-                    <input type="username" class="form-control" placeholder="Username" name="username">
+                    <input type="username" class="form-control" placeholder="Username" name="username" v-model="username"
+                        required>
                     <span class="glyphicon glyphicon-user form-control-feedback"></span>
                 </div>
                 <div class="form-group has-feedback">
-                    <input type="password" class="form-control" placeholder="Password" name="password">
+                    <input type="password" class="form-control" placeholder="Password" name="password" v-model="password"
+                        required>
                     <span class="glyphicon glyphicon-lock form-control-feedback"></span>
                 </div>
 
                 {% if ip2step %}
                 <div class="form-group has-feedback">
-                    <input type="text" class="form-control" placeholder="2-step verification" name="code" />
+                    <input type="text" class="form-control" placeholder="2-step verification" name="code" v-model="code" />
                     <span class="glyphicon glyphicon-lock form-control-feedback"></span>
                 </div>
                 {% endif %}
@@ -70,13 +69,14 @@
                     <div class="col-xs-8">
                         <div class="checkbox icheck">
                             <label>
-                                <input type="checkbox" id="remember_me"> Remember Me
+                                <input type="checkbox" ref="rememberMe"> Remember Me
                             </label>
                         </div>
                     </div>
                     <!-- /.col -->
                     <div class="col-xs-4">
-                        <button type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
+                        <button type="submit" class="btn btn-primary btn-block btn-flat" @click.prevent="signIn">Sign
+                            In</button>
                     </div>
                     <!-- /.col -->
                 </div>
@@ -85,7 +85,7 @@
 
             <!-- /.social-auth-links -->
 
-            <a href="#" id="btn_forgot">I forgot my password</a><br>
+            <a href="#" @click.prevent="forgetPassword">I forgot my password</a><br>
             <span>{{version}}</span>
 
         </div>
@@ -93,7 +93,6 @@
     </div>
     <!-- /.login-box -->
 
-    <input type='hidden' value="{{r}}" id="redirect" />
 
     <template id="forget_dialog">
         <form action="System/login/forget_password" method="post">
@@ -111,13 +110,16 @@
         </form>
     </template>
 
-    {% for src in script %}
-    <script src="{{src|raw}}"></script>
-    {% endfor %}
     {% verbatim %}
     <script>
+        Vue.use(VueLocalStorage);
         var vm = new Vue({
-            el: "#div1",
+            el: "#app",
+            data: {
+                username: "",
+                password: "",
+                code: ""
+            },
             created: function () {
                 if ('credentials' in navigator) {
                     navigator.credentials.get({
@@ -131,15 +133,50 @@
                 } else {
                     //Handle sign-in the way you did before.
                 };
+
+            }, mounted() {
+
+
+                $(this.$refs.rememberMe).iCheck({
+                    checkboxClass: 'icheckbox_square-blue',
+                    radioClass: 'iradio_square-blue',
+                    increaseArea: '20%' // optional
+                });
+
+                $(this.$refs.rememberMe).on("ifChecked", () => {
+                    this.$localStorage.set("app.remember_me", true)
+                });
+
+                $(this.$refs.rememberMe).on("ifUnchecked", () => {
+                    this.$localStorage.set("app.remember_me", false)
+                });
+
+                if (this.$localStorage.get("app.remember_me") == "true") {
+                    this.username = this.$localStorage.get("app.username");
+                    $(this.$refs.rememberMe).iCheck('check');
+                    $(this.$refs.rememberMe).iCheck('update');
+                }
+
             }, methods: {
-                login(id, password) {
+                rememberMe() {
+                    console.log("r");
+                },
+                login(username, password) {
                     this.$http.post("System/login", {
-                        username: id,
-                        password
+                        username: username,
+                        password: password,
+                        code: this.code
                     }).then(resp => {
                         if (resp.data.code == 200) {
-                            if ($("#redirect").val() != "") {
-                                window.self.location = $("#redirect").val();
+
+                            if (this.$localStorage.get("app.remember_me") == "true") {
+                                this.$localStorage.set("app.username", username);
+                            }
+
+                            var redirect = this.$refs.redirect.value;
+
+                            if (redirect != "") {
+                                window.self.location = redirect;
                             } else {
                                 window.self.location.reload();
                             }
@@ -150,84 +187,36 @@
 
                         }
                     });
-                }
+                }, signIn() {
+                    this.login(this.username, this.password);
 
-            }
-        });
+                }, forgetPassword() {
+                    var bb = bootbox.dialog({
+                        title: "Forget password",
+                        message: $("#forget_dialog").html()
 
-
-        $(function () {
-            $('input').iCheck({
-                checkboxClass: 'icheckbox_square-blue',
-                radioClass: 'iradio_square-blue',
-                increaseArea: '20%' // optional
-            });
-
-            $("#remember_me").prop("checked", $.cookie("app.remember_me"));
-            if ($.cookie("app.remember_me") == "true") {
-                $("input[name='username']").val($.cookie("app.username"));
-                $("#remember_me").iCheck('check');
-                $("#remember_me").iCheck('update');
-            } else {
-                $("input[name='username']").val("");
-            }
-
-        });
+                    }).on('shown.bs.modal', function () {
+                        $(this).find("form").on("submit", function () {
+                            $(this).ajaxSubmit(function (data) {
+                                bb.modal('hide');
+                                if (data.error) {
+                                    bootbox.alert(data.error.message);
+                                } else {
+                                    bootbox.alert("Password sent to your email if information correct");
+                                }
 
 
-        function onFormSubmit() {
-            $.post("System/login", {
-                username: $("input[name='username']").val(),
-                password: $("input[name='password']").val(),
-                code: $("input[name='code']").val()
-            }, function (data) {
-                if (data.code == 200) {
-                    //success login
-                    if ($("#remember_me").is(":checked")) {
-                        $.cookie("app.username", $("input[name='username']").val());
-                        $.cookie("app.remember_me", true);
-                    } else {
-                        $.cookie("app.remember_me", false);
-                    }
-
-                    if ($("#redirect").val() != "") {
-                        window.self.location = $("#redirect").val();
-                    } else {
-                        window.self.location.reload();
-                    }
-                } else {
-                    $(".login-box-msg").text(data.message).addClass("text-red");
-                }
-            }, 'json');
-
-            return false;
-
-        }
-
-        $(function () {
-            $("#btn_forgot").on("click", function () {
-                var bb = bootbox.dialog({
-                    title: "Forget password",
-                    message: $("#forget_dialog").html()
-
-                }).on('shown.bs.modal', function () {
-                    $(this).find("form").on("submit", function () {
-                        $(this).ajaxSubmit(function (data) {
-                            bb.modal('hide');
-                            if (data.error) {
-                                bootbox.alert(data.error.message);
-                            } else {
-                                bootbox.alert("Password sent to your email if information correct");
-                            }
-
-
+                            });
+                            return false;
                         });
-                        return false;
                     });
-                });
-            });
+                }
 
+            }
         });
+
+
+
     </script> {% endverbatim %}
 </body>
 
